macos 2017 intel version

--- a/smart-parking/services/api-gateway/Dockerfile
+++ b/smart-parking/services/api-gateway/Dockerfile
@@ -1,27 +1,27 @@
 FROM node:20-alpine AS deps
 WORKDIR /app
-COPY package.json ./
-RUN npm ci --omit=dev || npm i --omit=dev
+COPY package.json package-lock.json* ./
+RUN npm install --include=dev
+
+FROM node:20-alpine AS dev
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
+# фикс для dev-режима (tsx для TypeScript)
+RUN npm install -g tsx
+CMD ["npm", "run", "dev"]
 
 FROM node:20-alpine AS build
 WORKDIR /app
-COPY package.json tsconfig.json ./
-RUN npm ci || npm i
-COPY src ./src
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
 RUN npm run build
 
 FROM node:20-alpine AS prod
 WORKDIR /app
 ENV NODE_ENV=production
-COPY --from=deps /app/node_modules ./node_modules
-COPY --from=build /app/package.json ./package.json
 COPY --from=build /app/dist ./dist
+COPY --from=deps /app/node_modules ./node_modules
+COPY package.json ./
 HEALTHCHECK --interval=10s --timeout=3s --retries=5 CMD wget -qO- http://localhost:8080/api/health || exit 1
 CMD ["node", "dist/index.js"]
-
-FROM node:20-alpine AS dev
-WORKDIR /app
-COPY package.json tsconfig.json ./
-RUN npm install --include=dev
-COPY src ./src
-CMD ["npm", "run", "dev"]
