--- a/smart-parking/services/iot-simulator/Dockerfile
+++ b/smart-parking/services/iot-simulator/Dockerfile
@@ -1,6 +1,7 @@
+
 FROM node:20-alpine
 WORKDIR /app
-COPY package.json tsconfig.json ./
-RUN npm install --include=dev
+COPY package.json package-lock.json tsconfig.json ./
+RUN npm install --include=dev && npm install -g tsx
 COPY src ./src
 CMD ["npm", "run", "dev"]
