--- a/smart-parking/frontends/frontend-user/Dockerfile
+++ b/smart-parking/frontends/frontend-user/Dockerfile
@@ -1,9 +1,8 @@
 FROM node:20-alpine
 WORKDIR /app
 COPY package.json ./
-RUN npm ci || npm i
+RUN rm -rf node_modules && npm install --include=dev && npm install @rollup/rollup-linux-x64-musl --save-optional
 COPY index.html vite.config.ts tailwind.config.ts postcss.config.js ./
 COPY src ./src
 ENV VITE_API_URL=${VITE_API_URL}
-# Ensure dependencies inside runtime volume are up to date
-CMD ["sh", "-lc", "npm install --include=dev && npm run dev -- --host 0.0.0.0 --port 5173"]
+CMD ["sh", "-lc", "npm install --include=dev && npm install @rollup/rollup-linux-x64-musl --save-optional && npm run dev -- --host 0.0.0.0 --port 5173"]
