--- a/smart-parking/package.json
+++ b/smart-parking/package.json
@@ -8,6 +8,10 @@
     "axios": "^1.12.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "openai": "^5.20.1"
+    "openai": "^5.20.1",
+    "@rollup/rollup-linux-x64-gnu": "^4.9.2"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-musl": "4.9.5"
   }
 }
