--- a/smart-parking/services/central/Dockerfile
+++ b/smart-parking/services/central/Dockerfile
@@ -23,5 +23,6 @@ FROM node:20-alpine AS dev
 WORKDIR /app
 COPY package.json tsconfig.json ./
 RUN npm install --include=dev
+RUN npm install -g tsx
 COPY src ./src
 CMD ["npm", "run", "dev"]
