--- a/smart-parking/services/payment-simulator/Dockerfile
+++ b/smart-parking/services/payment-simulator/Dockerfile
@@ -2,5 +2,6 @@ FROM node:20-alpine
 WORKDIR /app
 COPY package.json tsconfig.json ./
 RUN npm install --include=dev
+RUN npm install -g tsx
 COPY src ./src
 CMD ["npm", "run", "dev"]
